Issue Fixed: Edited existing questions not saving on saving test - IE and wizard icon  alignment for mac

--- a/WebContent/styles/testGenMain.css
+++ b/WebContent/styles/testGenMain.css
@@ -3303,7 +3303,7 @@ a#testwizard {
      padding-top: 1px;
      padding-right: 1px;
 }
-wizardWhiteMac{
+.wizardWhiteMac{
 	 padding-left: 20px;
 	 background: url("../images/wizard_wand.png") 0px -29px no-repeat;
 	 padding-top: 1px;
